--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/hammerjs": "^2.0.36",
+    "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^7.3.11",
     "jszip": "^3.1.5",
