--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -81,8 +80,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
