change ci and env

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,8 +30,7 @@ jobs:
     - name: Deploy to now!
       env:
         EMAIL: lucasbsilva29@gmail.com
-        SENHA: Mona
-      run: echo $EMAIL $SENHA
-      
-      env:
+        SENHA: lucas
         CI: true
+      run: echo $EMAIL $SENHA
+        
