--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@types/hammerjs": "^2.0.36",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
@@ -26,7 +28,7 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^7.3.11",
     "jszip": "^3.1.5",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
