--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^7.3.11",
     "jszip": "^3.1.5",
+    "normalize.css": "^8.0.1",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
