--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/personal-site",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -51,6 +52,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -82,6 +87,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/normalize.css/normalize.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/font-awesome/css/font-awesome.css",    
               "src/styles.css"
             ],
             "scripts": [],
@@ -134,5 +141,8 @@
       }
     }
   },
-  "defaultProject": "personal-site"
+  "defaultProject": "personal-site",
+  "cli": {
+    "analytics": false
+  }
 }
