--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,10 @@
             ],
             "styles": [
               "./node_modules/normalize.css/normalize.css",
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/animate.css/animate.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -87,8 +91,10 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/normalize.css/normalize.css",
+              "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/font-awesome/css/font-awesome.css",    
+              "./node_modules/animate.css/animate.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": [],
