--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/hammerjs": "^2.0.36",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^9.0.12",
+    "jquery": "^3.5.0",
     "jszip": "^3.4.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.5.5",
