--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,7 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/animate.css/animate.css",
               "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/particles.js/particles.js",
               "src/styles.css"
             ],
             "scripts": [],
