--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.5.0",
     "jszip": "^3.4.0",
     "normalize.css": "^8.0.1",
+    "particles.js": "^2.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
