--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
+    "rootDir": "./src",
     "typeRoots": [
       "node_modules/@types"
     ],
