--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jszip": "^3.4.0",
     "normalize.css": "^8.0.1",
     "particles.js": "^2.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
