--- a/angular.json
+++ b/angular.json
@@ -24,14 +24,15 @@
             ],
             "styles": [
               "./node_modules/normalize.css/normalize.css",
-              "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/animate.css/animate.css",
-              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/popper.js/dist/popper.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/popper.js/dist/popper.min.js",
+              "./node_modules/particles.js/particles.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -96,14 +97,13 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/normalize.css/normalize.css",
-              "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/animate.css/animate.css",
-              "./node_modules/font-awesome/css/font-awesome.css",
-              "./node_modules/particles.js/particles.js",
               "src/styles.css"
             ],
             "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/popper.js/dist/popper.min.js",
               "./node_modules/particles.js/particles.js"
             ],
