--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Chrome Debugger",
-            "type": "chrome",
+            "type": "pwa-chrome",
             "request": "launch",
-            "runtimeExecutable": "/usr/bin/chromium-browser",
-            "url": "http://localhost:4200/",
-            "sourceMaps": true,
-            "webRoot": "${workspaceRoot}",
-            "port": 9222,
-            "skipFiles": [
-                "${workspaceFolder}/node_modules/**/*.js",
-            ]
+            "name": "Launch Chrome",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
