--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "hammerjs": "^2.0.8",
         "jquery": "^3.5.0",
         "jszip": "^3.4.0",
+        "ngx-skeleton-loader": "^4.0.0",
         "normalize.css": "^8.0.1",
         "particles.js": "^2.0.0",
         "popper.js": "^1.16.1",
