--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,15 @@
               "src/assets"
             ]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -141,6 +150,7 @@
   },
   "defaultProject": "personal-site",
   "cli": {
+    "defaultCollection": "@angular-eslint/schematics",
     "analytics": false
   }
 }
