--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
     "jszip": "^3.4.0",
+    "ngx-loading": "^13.0.0",
     "ngx-skeleton-loader": "^4.0.0",
     "normalize.css": "^8.0.1",
     "particles.js": "^2.0.0",
@@ -43,7 +44,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
+    "@angular-devkit/build-angular": "^13.2.4",
     "@angular-eslint/builder": "12.6.1",
     "@angular-eslint/eslint-plugin": "12.6.1",
     "@angular-eslint/eslint-plugin-template": "12.6.1",
