--- a/angular.json
+++ b/angular.json
@@ -148,9 +148,10 @@
       }
     }
   },
-  "defaultProject": "personal-site",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics",
-    "analytics": false
+    "analytics": false,
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
