--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
     "jszip": "^3.4.0",
+    "ngx-carousel": "^1.2.0",
     "ngx-skeleton-loader": "^4.0.0",
     "ngx-ui-loader": "^11.0.0",
     "normalize.css": "^8.0.1",
