--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/hammerjs": "^2.0.36",
     "animate.css": "^3.7.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
