--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^5.2.3",
     "core-js": "^3.6.5",
+    "eslit": "^6.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
     "jszip": "^3.4.0",
@@ -40,9 +41,9 @@
     "normalize.css": "^8.0.1",
     "particles.js": "^2.0.0",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.1",
