--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,6 +29,7 @@ jobs:
         run: npx eslint .
           --config .eslintrc.json
           --ext .js,.jsx,.ts,.tsx
+          --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
 
