--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.1",
-    "@angular-eslint/builder": "12.6.1",
+    "@angular-eslint/builder": "^16.0.3",
     "@angular-eslint/eslint-plugin": "12.6.1",
     "@angular-eslint/eslint-plugin-template": "12.6.1",
-    "@angular-eslint/schematics": "12.6.1",
+    "@angular-eslint/schematics": "^16.0.3",
     "@angular-eslint/template-parser": "12.6.1",
     "@angular/cli": "^15.0.1",
     "@angular/compiler-cli": "^15.0.1",
@@ -72,7 +72,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.9.1",
     "typescript": "~4.8.4"
   }
