--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
+    "webpack": "^5.88.2",
+    "xml2js": "^0.6.2",
     "zone.js": "^0.11.8"
   },
   "devDependencies": {
@@ -72,7 +74,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "^7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.9.1",
     "typescript": "~4.8.4"
   }
