--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "4.33.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
@@ -77,5 +79,10 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.9.1",
     "typescript": "~5.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
