--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "4.33.0",
     "commitizen": "^4.3.0",
+    "cz-cli": "^1.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "latest",
