--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "e2e": "ng e2e"
   },
   "dependencies": {
@@ -49,11 +50,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/builder": "17.1.0",
     "@angular-eslint/eslint-plugin": "17.1.0",
-    "@angular-eslint/eslint-plugin-template": "16.2.0",
-    "@angular-eslint/schematics": "^17.1.0",
-    "@angular-eslint/template-parser": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "17.1.0",
+    "@angular-eslint/schematics": "17.1.0",
+    "@angular-eslint/template-parser": "17.1.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
@@ -61,9 +62,9 @@
     "@types/jasmine": "~5.1.2",
     "@types/jasminewd2": "~2.0.12",
     "@types/node": "^20.8.4",
-    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
