feat: add missing changes

--- a/.github/ISSUE_TEMPLATE/sweep-template.yml
+++ b/.github/ISSUE_TEMPLATE/sweep-template.yml
@@ -1,7 +1,8 @@
 name: Sweep Issue
 title: "Sweep: "
 description: For small bugs, features, refactors, and tests to be handled by Sweep, an AI-powered junior developer.
-labels: sweep
+labels:
+  - sweep
 body:
   - type: textarea
     id: description
