--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "jszip": "^3.4.0",
+    "ngx-cookie-service": "^17.1.0",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-ui-loader": "^13.0.0",
     "normalize.css": "^8.0.1",
