build: angular core version

--- a/angular.json
+++ b/angular.json
@@ -152,6 +152,9 @@
     "analytics": false,
     "schematicCollections": [
       "@angular-eslint/schematics"
-    ]
+    ],
+    "cache": {
+      "enabled": false
+    }
   }
 }
