--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@nguniversal/express-engine": "^16.2.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/bootstrap": "^5.2.9",
