--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/localize": "^18.2.6",
     "@angular/platform-browser": "^18.2.6",
     "@angular/platform-browser-dynamic": "^18.2.6",
+    "@angular/platform-server": "^18.2.11",
     "@angular/router": "^18.2.8",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
