--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "^7.8.2",
     "tslib": "^2.7.0",
+    "uuid": "^7.0.3",
     "webpack": "^5.95.0",
     "xml2js": "^0.6.2",
     "zone.js": "^0.15.0"
