Add utm_source parameter to all links
Add `utm_source` parameter to all URLs across the site.

* **Utility Function**:
  - Add `addUtmSource` function in `src/app/services/utils.service.ts` to append `utm_source` parameter to URLs.
  - Ensure the function handles URLs with and without existing parameters.
  - Exclude `mailto` links from having the `utm_source` parameter added.

* **Unit Tests**:
  - Add unit tests for the `addUtmSource` function in `src/app/services/utils.service.spec.ts` to cover various scenarios.
  - Validate that the `utm_source` parameter is correctly added to URLs.
  - Ensure `mailto` links are not modified by the `addUtmSource` function.

* **Component Integration**:
  - Integrate the `addUtmSource` function in `src/app/portfolio/portfolio.component.ts`, `src/app/secondary-components/icones/icones.component.ts`, and `src/app/secondary-components/publications/publications.component.ts` to modify URLs before they are rendered.
  - Add `modifyLinks` method in each component to apply the `addUtmSource` function to all links.

* **Miscellaneous**:
  - Update `.devcontainer/devcontainer.json` to include a test task.
  - Update `package-lock.json` with new dependencies.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Lucs1590/Personal_Site?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
     "tasks": {
-        "build": "npm install --force && npm run build"
+        "build": "npm install --force && npm run build",
+        "test": "npm install --force && npm test"
     }
 }
