--- a/angular.json
+++ b/angular.json
@@ -16,9 +16,7 @@
             "allowedCommonJsDependencies": [
               "hammerjs"
             ],
-            "outputPath": {
-              "base": "dist/personal-site"
-            },
+            "outputPath": "dist/personal-site",
             "index": "src/index.html",
             "polyfills": [
               "src/polyfills.ts",
@@ -32,16 +30,16 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/normalize.css/normalize.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/animate.css/animate.css",
+              "node_modules/normalize.css/normalize.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/animate.css/animate.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/popper.js/dist/popper.min.js",
-              "./node_modules/particles.js/particles.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/popper.js/dist/popper.min.js",
+              "node_modules/particles.js/particles.js"
             ],
             "extractLicenses": false,
             "sourceMap": true,
@@ -59,7 +57,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": true,
+              "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
               "budgets": [
@@ -73,9 +71,14 @@
                   "maximumWarning": "6kb"
                 }
               ]
+            },
+            "development": {
+              "sourceMap": true,
+              "optimization": false,
+              "namedChunks": true
             }
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -85,8 +88,12 @@
           "configurations": {
             "production": {
               "buildTarget": "personal-site:build:production"
+            },
+            "development": {
+              "buildTarget": "personal-site:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -102,16 +109,16 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/normalize.css/normalize.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/animate.css/animate.css",
+              "node_modules/normalize.css/normalize.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/animate.css/animate.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/popper.js/dist/popper.min.js",
-              "./node_modules/particles.js/particles.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/popper.js/dist/popper.min.js",
+              "node_modules/particles.js/particles.js"
             ],
             "assets": [
               "src/icon.ico",
@@ -158,7 +165,7 @@
       "@angular-eslint/schematics"
     ],
     "cache": {
-      "enabled": false
+      "enabled": true
     }
   }
 }
