--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
     "standard-version": "^9.5.0",
+    "timers": "^0.1.1",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3"
   },
