--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "8.46.0",
     "@typescript-eslint/parser": "8.53.0",
+    "baseline-browser-mapping": "^2.9.19",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
