--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,12 @@ jobs:
         run: npm ci --prefer-offline --no-audit --progress=false
 
       - name: Replace IP Geolocation API key
-        if: ${{ secrets.IPGEOLOCATION_API_KEY != '' }}
+        if: env.IPGEOLOCATION_API_KEY != ''
+        env:
+          IPGEOLOCATION_API_KEY: ${{ secrets.IPGEOLOCATION_API_KEY }}
         run: |
           echo "Replacing placeholder in src/environments/environment.prod.ts"
-          sed -i 's/\${IPGEOLOCATION_API_KEY}/${{ secrets.IPGEOLOCATION_API_KEY }}/g' src/environments/environment.prod.ts
+          sed -i 's/\${IPGEOLOCATION_API_KEY}/'"$IPGEOLOCATION_API_KEY"'/g' src/environments/environment.prod.ts
 
       - name: Build (production)
         run: npm run build --if-present || ng build --configuration production
