--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Replace IP Geolocation API key
         if: env.IPGEOLOCATION_API_KEY != ''
         env:
-          IPGEOLOCATION_API_KEY: ${{ secrets.IPGEOLOCATION_API_KEY }}
+          IPGEOLOCATION_API_KEY: ${{ env.IPGEOLOCATION_API_KEY }}
         run: |
           echo "Replacing placeholder in src/environments/environment.prod.ts"
           sed -i 's/\${IPGEOLOCATION_API_KEY}/'"$IPGEOLOCATION_API_KEY"'/g' src/environments/environment.prod.ts
